69f3161461ac34b23502c16af4c1231fe84e4b05 Fix - styling: Foundation for dropdown didn't include a z-index
CT-1397

Sync to source repo @69f3161461ac34b23502c16af4c1231fe84e4b05

--- a/css/buttons.foundation.css
+++ b/css/buttons.foundation.css
@@ -125,6 +125,7 @@ ul.dt-buttons.button-group a {
 
 div.dt-button-collection {
   position: absolute;
+  z-index: 2002;
 }
 div.dt-button-collection.fixed {
   position: fixed;
